# jni-verify

./: Cargo.toml
src/: lib.rs
tests/: test.rs
